[profile.release]
panic = "unwind"

[workspace]
members = [
    "pallets/*",
    "pallets/leaf-provider/runtime-api",
    "pallets/leaf-provider/rpc",
    "pallets/beefy-light-client/runtime-api",
    "pallets/beefy-light-client/rpc",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
bitvec = { version = "1" }
codec = { version = "3", package = "parity-scale-codec" }
derivative = { version = "2.2.0" }
env_logger = "0.7.1"
ethbloom = { version = "0.13.0" }
ethereum-types = { version = "0.14.1" }
getrandom = { version = "0.2.1" }
hex = { package = "rustc-hex", version = "2.1.0" }
hex-literal = { version = "0.4.1" }
jsonrpsee = { version = "0.16.2" }
libsecp256k1 = { version = "0.7" }
log = { version = "0.4.20" }
mmr-lib = { package = "ckb-merkle-mountain-range", version = "0.5.2" }
once_cell = { version = "1.5.2" }
parity-bytes = { version = "0.1.2" }
rand = "0.8.5"
rlp = { version = "0.5.2" }
scale-info = { version = "2" }
serde = { version = "1.0.130" }
serde_json = "1.0.73"
test-case = "3.1.0"
wasm-bindgen-test = "0.3.19"

ethabi = { git = "https://github.com/sora-xor/ethabi.git", branch = "sora-v1.6.0", package = "ethabi", default-features = false }
ethash = { git = "https://github.com/sora-xor/ethash.git", branch = "sora-v1.6.0", default-features = false }

currencies = { version = "1.0.0", package = "orml-currencies", default-features = false }
tokens = { version = "1.0.0", package = "orml-tokens", default-features = false }
traits = { version = "1.0.0", package = "orml-traits", default-features = false }
orml-currencies = { version = "1.0.0", default-features = false }
orml-tokens = { version = "1.0.0", default-features = false }
orml-traits = { version = "1.0.0", default-features = false }

binary-merkle-tree = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
frame-benchmarking = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
frame-support = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
frame-system = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-balances = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-beefy-mmr = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-timestamp = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-api = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-blockchain = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-consensus-beefy = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-core = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-externalities = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-io = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-keyring = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-keystore = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-mmr-primitives = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-runtime = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
sp-std = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
staging-xcm = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }
pallet-assets = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", version = "4.0.0-dev", default-features = false }
sp-session = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0", default-features = false }

[patch."https://github.com/paritytech/polkadot-sdk.git"]
frame-benchmarking = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
frame-support = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
frame-system = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
pallet-authorship = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
pallet-balances = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
pallet-session = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
pallet-timestamp = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
# sc-finality-grandpa = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-api = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-application-crypto = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-arithmetic = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-blockchain = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-consensus = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-core = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-database = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
# sp-finality-grandpa = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-inherents = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-io = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-keystore = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-runtime = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-runtime-interface = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-session = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-staking = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-std = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-storage = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-timestamp = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-trie = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-version = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-keyring = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-state-machine = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-externalities = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
sp-mmr-primitives = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
# mmr-rpc = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
# pallet-mmr = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
pallet-beefy = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
staging-xcm = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
# frame-benchmarking-cli = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
# sc-consensus = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
# sc-finality-grandpa = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
# sp-consensus = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
# sp-finality-grandpa = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
# mmr-rpc = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
# pallet-mmr = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
# pallet-beefy-mmr = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
# beefy-gadget = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
# beefy-gadget-rpc = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
# beefy-merkle-tree = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
pallet-beefy-mmr = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }
pallet-mmr = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "release-polkadot-v1.6.0" }

